# benkhawiya-pro

./: .flake8  Makefile  README.md  netlify.toml  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: code-quality.yml
app/: __init__.py  main.py
app/core/: __init__.py  cosmic_engine.py
app/templates/: index.html
backend/: .gitignore
backend/app/core/: cosmic_engine.py
public/: _headers  index.html
